syntax = "proto3";
package aumega.guard.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/AumegaChain/aumega/x/guard/types";
option (gogoproto.equal_all) = true;

message MsgAccounts {
  repeated string accounts = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message MsgIndexes {
  repeated bytes indexes = 1;
}

message AccountPrivileges {
  bytes account = 1;
  bytes privileges = 2;
}

message RequiredPrivileges {
  bytes index = 1;
  bytes privileges = 2;
  string kind = 3;
}

message AuthzGrantRevokeMsgType {
  string type_url = 1;
  bool grant = 2;
}

message AuthzGrantRevokeMsgsTypes {
  repeated AuthzGrantRevokeMsgType msgs = 1;
}
